--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,24 @@
             <div class="form-group">
                 <label for="apiKey">Your YouTube Data API v3 API Key:</label>
                 <input type="text" class="form-control" id="apiKey" name="apiKey" placeholder="Enter your API key" required>
+                <!-- Explanation on how to get the API key -->
+                <small class="form-text text-muted">
+                    <strong>How to get your YouTube Data API v3 API Key:</strong>
+                    <br>
+                    1. Go to the <a href="https://console.developers.google.com/" target="_blank">Google Developers Console</a>.
+                    <br>
+                    2. Create a new project or select an existing project.
+                    <br>
+                    3. Navigate to the "Library" tab and search for "YouTube Data API v3".
+                    <br>
+                    4. Click on "Enable" to enable the API for your project.
+                    <br>
+                    5. Go to the "Credentials" tab and click on "Create Credentials".
+                    <br>
+                    6. Select "API key" from the dropdown menu. Your API key will be generated.
+                    <br>
+                    7. Copy the API key and paste it in the box above.
+                </small>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
